# quadraturerules

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CC  LICENSE-FA  README.md  RELEASE.md
.github/scripts/: julia_release.py  version.py
.github/workflows/: libraries.yml  library-c.yml  library-cpp.yml  library-fortran77.yml  library-fortran90.yml  library-julia.yml  library-python.yml  library-rust.yml  release.yml  test-and-build.yml  test-release.yml  test.yml  version.yml
python/: pyproject.toml
python/qrtools/: __init__.py  generate_qr.py  integrand.py  rules.py  settings.py
python/test/: test_against_quadpy.py  test_integrand.py  test_numbering.py  test_rule.py  test_unit.py
rules/: Q000001.qr  Q000002.qr  Q000003.qr  Q000004.qr  Q000005.qr  Q000006.qr  Q000007.qr  Q000008.qr  Q000009.qr  Q000010.qr  Q000011.qr  Q000012.qr
rules/Q000001/: interval-0.rule  interval-10.rule  interval-11.rule  interval-12.rule  interval-13.rule  interval-14.rule  interval-15.rule  interval-16.rule  interval-17.rule  interval-18.rule  interval-19.rule  interval-2.rule  interval-20.rule  interval-21.rule  interval-3.rule  interval-4.rule  interval-5.rule  interval-6.rule  interval-7.rule  interval-8.rule  interval-9.rule
rules/Q000002/: tetrahedron-1.rule  tetrahedron-10.rule  tetrahedron-11.rule  tetrahedron-12.rule  tetrahedron-13.rule  tetrahedron-14.rule  tetrahedron-15.rule  tetrahedron-2.rule  tetrahedron-3.rule  tetrahedron-4.rule  tetrahedron-5.rule  tetrahedron-6.rule  tetrahedron-7.rule  tetrahedron-8.rule  tetrahedron-9.rule  triangle-1.rule  triangle-10.rule  triangle-11.rule  triangle-12.rule  triangle-13.rule  triangle-14.rule  triangle-15.rule  triangle-16.rule  triangle-17.rule  triangle-18.rule  triangle-19.rule  triangle-2.rule  triangle-20.rule  triangle-21.rule  triangle-22.rule  triangle-23.rule  triangle-24.rule  triangle-25.rule  triangle-26.rule  triangle-27.rule  triangle-28.rule  triangle-29.rule  triangle-3.rule  triangle-30.rule  triangle-4.rule  (+5 more)
rules/Q000003/: interval-0.rule  interval-1.rule  interval-10.rule  interval-11.rule  interval-12.rule  interval-13.rule  interval-14.rule  interval-15.rule  interval-16.rule  interval-17.rule  interval-18.rule  interval-19.rule  (+9 more)
test/: test_numbering.py  test_unit.py
website/: build.py  requirements.txt
(+160 files in other folders)
