[project]
name = "qrtools"
version = "0.1.0"
description = "tools for building quadraturerules.org"
readme = "README.md"
requires-python = ">=3.8.0"
license = { file = "LICENSE" }
authors = [
    { name = "Matthew Scroggs", email = "defelement@mscroggs.co.uk" }
]
dependencies = ["PyGithub", "pytz", "website-build-tools[f77]", "ruff", "qr-generate"]

[project.optional-dependencies]
optional = ["CairoSVG>=2.6.0"]
test = ["numpy", "pytest"]
lint = ["flake8", "mypy", "pydocstyle", "isort"]
[project.urls]
homepage = "https://github.com/quadraturerules/quadraturerules"
repository = "https://github.com/quadraturerules/quadraturerules"

[tool.mypy]
ignore_missing_imports = true
