[project]
name = "qrtools"
version = "0.1.0"
description = "tools for building quadraturerules.org"
readme = "README.md"
requires-python = ">=3.10.0"
license = { file = "LICENSE" }
authors = [
    { name = "Matthew Scroggs", email = "quadrature@mscroggs.co.uk" }
]
dependencies = [
    "PyGithub",
    "pytz",
    "qr-generate",
    "ruff",
    "website-build-tools[f77]",
    "typing_extensions; python_version < '3.11'"
]

[project.optional-dependencies]
optional = ["CairoSVG>=2.6.0"]
test = ["numpy", "pytest", "legacy-quadpy"]
lint = ["ruff", "mypy", "pydocstyle"]

[project.urls]
homepage = "https://github.com/quadraturerules/quadraturerules"
repository = "https://github.com/quadraturerules/quadraturerules"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
